Fixed info session spacing
Fixed info session spacing

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ btn:visited
 .infoBox3
 {
     padding: 25rem 0 15rem 0;
-    height: 105vh;
+    background-size: auto;
 }
 
 .infoBox4
@@ -569,6 +569,19 @@ btn:visited
     width: 40%;
     height: 40%;
     margin:0 auto; /* center your carousel if other than 100% */ 
+}
+
+
+/* Info Sessions Area */
+hr
+{
+    width: 97.5%;
+    margin-left: 1.2%;
+}
+
+.infoSessionRow
+{
+
 }
 
 /*
